# autoBot

./: .flake8  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
kino_bot/: Lazada_bot.py  bot.py  file_system.py  test.py
